--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+*, ::after, ::before {
+    box-sizing: border-box;
+    border-collapse: collapse;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    color: red;
+    display: grid;
+    grid-template-columns: 1.25fr 2fr;
+    height: 100vh;
+}
+
+.image-container {
+    background: url(/img/Bg.jpg) no-repeat fixed center/100%;
+}
+
+.form {
+    
 }
