--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    text-transform: uppercase;
 }
 
 body {
@@ -16,6 +17,47 @@ body {
     background: url(/img/Bg.jpg) no-repeat fixed center/100%;
 }
 
-.form {
-    
+.form-section {
+    padding: 200px 50px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: space-between;
+}
+
+.form-row {
+    display: flex;
+    gap: 100px;
+    margin-bottom: 25px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.form-input > label {
+    font-size: 1.25rem;
+    margin-bottom: 5px;
+}
+
+input {
+    height: 35px;
+    font-size: 1.25rem;
+}
+
+h1 {
+    font-size: 3rem;
+    margin-bottom: 50px;
+}
+
+input[type="text"] {
+    text-transform: capitalize;
+}
+
+input[type="email"] {
+    text-transform: lowercase;
 }
