--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .form-section {
-    padding: 200px 50px;
+    padding: 100px 250px 100px 100px;
 }
 
 form {
@@ -29,8 +29,13 @@ form {
 
 .form-row {
     display: flex;
-    gap: 100px;
-    margin-bottom: 25px;
+    gap: 150px;
+    margin-bottom: 50px;
+}
+
+.form-row:last-of-type {
+    background-color: red;
+    margin-bottom: 100px;
 }
 
 .form-input {
@@ -41,17 +46,36 @@ form {
 
 .form-input > label {
     font-size: 1.25rem;
-    margin-bottom: 5px;
+    margin-bottom: 7px;
+    padding-left: 7px;
 }
 
 input {
-    height: 35px;
+    height: 50px;
+    font-size: 1.5rem;
+    padding-left: 5px;
+    border-radius: 5px;
+    padding-top: 5px;
+}
+
+.create-account {
+    margin-top: 50px;
+}
+
+button[value="submit"] {
+    width: 300px;
+    height: 75px;
+    background-color: Rgb(221,58,243);
     font-size: 1.25rem;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 25px;
 }
 
 h1 {
     font-size: 3rem;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 input[type="text"] {
