--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,13 @@ form {
 
 input {
     height: 50px;
-    border: 3px solid var(--secondary-color);
+    border: 3px solid var(--bg-color);
     font-size: 1.5rem;
     padding-left: 5px;
     border-radius: 5px;
     padding-top: 5px;
-    transition: 1s;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
     outline: none;
 }
 
@@ -120,6 +121,12 @@ a {
     text-decoration: none;
     font-weight: bold;
     color: var(--main-color);
+}
+
+.footnote {
+    margin-top: 10px;
+    font-size: 1rem;
+    text-transform: none;
 }
 
 input:focus {
