--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,6 @@ a {
     text-decoration: none;
     font-weight: bold;
     color: var(--main-color);
-    
 }
 
 a:hover {
@@ -146,7 +145,7 @@ span[aria-label="required"] {
 
 button:hover ~ .footnote {
     font-size: 1.1em;
-    color: var(--main-color);
+    color: #900;
 }
 
 input:hover {
@@ -163,4 +162,13 @@ input[type="text"] {
 
 input[type="email"] {
     text-transform: lowercase;
+}
+
+input:not(:placeholder-shown):not(:focus):invalid {
+    border-color: #900;
+    background-color: #fdd;
+}
+
+input:not(:placeholder-shown):not(:focus):valid {
+    border-color: rgb(0, 153, 64);
 }
