--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     align-items: center;
     box-shadow: 10px 0 10px var(--main-color);
-    background: url(/img/bg.jpg) no-repeat fixed center/100%;
+    background: url(./img/bg.jpg) no-repeat fixed center/100%;
 }
 
 .logo-container {
